about_me_stylesheet.css
/*-----------------------------------------------------
-------          CSS reset start       ----------
-------------------------------------------------------*/
html, body, div, span, 
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
img, ins, kbd, q, s, samp,
small, strike, strong, 
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: "";
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*-----------------------------------------------------
-------          CSS reset end       ----------
-------------------------------------------------------*/

body {
	z-index:0;
	position:absolute;
	width: 100%;
	background: url("https://www.dropbox.com/s/umqrddiw8jviblb/bozeman_mountains2.jpg?raw=1") no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

.line-split {
	width:70%;
	height:1px;
	margin: 0 auto;
	margin-top:6%;
	margin-bottom:2%;
	background-color: black;
}

h2 {
	font-size: 300%;
	margin-left: 10%;
	margin-right: 10%;
	margin-top: 5%;
	margin-bottom: 3%;
}

h3 {
	font-size: 200%;
	font-family: Garamond, Verdana, Arial;
}

h4 {
	font-size: 120%;
	line-height: 200%;
	margin-left: 10%;
	margin-right: 10%;
	font-family: Garamond, Verdana, Arial;
}

h6{
	font-size: 120%;
	margin-top: 5%;
	font-family: Garamond, Verdana, Arial;
}

p {
	font-size: 100%;
	line-height: 200%;
	margin-right: 10%;
	font-family: Garamond, Verdana, Arial;
}

a {
	text-decoration: none;
	color: black;
}

span {
	font-weight: bold;
}

#page-menu-container {
	z-index: 20;
	display: block;
	width: 960px;
	margin: 0 auto;
	margin-top: -4.5%;
	text-align: center;
	overflow-y: initial;
	border-radius: 5px;
}

#page-menu-container ul li{
	display: inline-block;
	width: 15%;
	height: 100%;
	margin-bottom: 0%;
	margin-right: 2%;
	overflow: visible;
	border-radius: 3px;
	
}

#page-menu-container p{
	position: block;
	width: 100%;
	height: 100%;
	margin: 0 auto;
	vertical-align: center;
	color: black;
	border-radius: 3px;
	
}

#page-menu-container p a {
	display: block;
	width: 100%;
	height: 100%;
	margin: 0 auto;
	padding-bottom: 6%;
	background: #89aec2;
	border-radius: 3px;
	border: 1px solid black;
	
}

#page-menu-container a:hover {
	background: #abc6d4;
}

#page-menu-container #about_me_link {
	z-index: 10;
	padding-bottom: 7%;
	background: #abc6d4;
	border-bottom: 0;
}

#main-section {
	z-index: 1;
	width: 960px;
	margin: 0 auto;
	margin-top: 10%;
	margin-bottom: 5%;
	padding-bottom: 5%;
	flex-direction: column;
	background: #abc6d4;
	border: 1px solid black;
}

#left-side {
	display: inline-block;
	width: 30%;
	margin-left: 5%;
	margin-top: 5%;
	text-align: left;
	vertical-align: top;
}

#left-side p{
	line-height: 150%;
}

#left-side a{
	text-decoration: underline;
	color: blue;
}

#right-side {
	position: relative;
	display: inline-block;
	width: 40%;
	margin-top: 5%;
	text-align: left;
	vertical-align: top;
}

#right-side p{
	font-size: 100%;
	line-height: 150%;
	margin-bottom: 4%;
}

#left-side img {
	width:80%;
	border: 1px solid black;
}

